--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,10 @@
     "button_text": "E-Services",
     "button_link": "https://asiointi.mol.fi/omaasiointi/",
     "title_aria_label": "Helsinki: Employment services",
-    "navigate_to_page": "Navigate to page"
+    "navigate_to_page": "Navigate to page",
+    "frontpage": "Front page",
+    "breadcrumb_label": "Breadcrumb",
+    "theme_dropdown": "Additional languages"
   },
   "search": {
     "filter": "Filter events",
