--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -6,7 +6,10 @@
     "button_text": "E-Tjänster",
     "button_link": "https://asiointi.mol.fi/omaasiointi/?kieli=sv",
     "title_aria_label": "Helsingfors: Sysselsättningstjänster",
-    "navigate_to_page": "Navigera till sidan"
+    "navigate_to_page": "Navigera till sidan",
+    "frontpage": "Framsida",
+    "breadcrumb_label": "Synlig sökväg",
+    "theme_dropdown": "Övriga Språk"
   },
   "search": {
     "filter": "Filtrera evenemang",
