--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -6,7 +6,10 @@
     "button_text": "Oma asiointi",
     "button_link": "https://asiointi.mol.fi/omaasiointi/",
     "title_aria_label": "Helsinki: Työllisyyspalvelut",
-    "navigate_to_page": "Siiry sivulle"
+    "navigate_to_page": "Siiry sivulle",
+    "frontpage": "Etusivu",
+    "breadcrumb_label": "Murupolku",
+    "theme_dropdown": "Lisäkielet"
   },
   "search": {
     "filter": "Suodata tapahtumia",
