--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -23,7 +23,9 @@
     "results_text": "search results"
   },
   "event": {
-    "remote_event": "Remote event"
+    "remote_event": "Remote event",
+    "info_url_text": "Event homepage",
+    "info_url_text_teams": "Open Teams-event"
   },
   "video": {
     "cookie_consent": "You have not allowed the use of cookies on this site.",
