--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -23,7 +23,9 @@
     "results_text": "sökresultat"
   },
   "event": {
-    "remote_event": "Virtuellt evenemang"
+    "remote_event": "Virtuellt evenemang",
+    "info_url_text": "Evenemangets hemsida",
+    "info_url_text_teams": "Öppna Teams-evenemanget"
   },
   "video": {
     "cookie_consent": "Du har inte gett tillstånd att installera cookies.",
