--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -23,7 +23,9 @@
     "blog_url": "/fi/blogi",
     "events_url": "/fi/tapahtuma",
     "news_url": "/fi/uutiset",
-    "results_text": "hakutulosta"
+    "results_text": "hakutulosta",
+    "show_all_events": "Näytä kaikki tapahtumat",
+    "events_page_url": "/tapahtumat"
   },
   "event": {
     "remote_event": "Etätapahtuma",
