--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -24,7 +24,7 @@
     "events_url": "/sv/evenemang",
     "news_url": "/sv/nyheter",
     "results_text": "sökresultat",
-    "show_all_events": "visa alla evenemang",
+    "show_all_events": "Visa alla evenemang",
     "events_page_url": "/sv/evenemang"
   },
   "event": {
