THF-155: news list foundation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -22,6 +22,7 @@
     "read_more_news": "Read all news",
     "blog_url": "/en/blog",
     "events_url": "/en/event",
+    "show_all_news": "Show all news",
     "news_url": "/en/news",
     "results_text": "search results",
     "show_all_events": "Show all events",
