--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -22,6 +22,7 @@
     "read_more_news": "Lue kaikki uutiset",
     "blog_url": "/fi/blogi",
     "events_url": "/fi/tapahtuma",
+    "show_all_news": "Näytä kaikki uutiset",
     "news_url": "/fi/uutiset",
     "results_text": "hakutulosta",
     "show_all_events": "Näytä kaikki tapahtumat",
