--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -22,6 +22,7 @@
     "read_more_news": "Läs alla nyheter",
     "blog_url": "/sv/blogg",
     "events_url": "/sv/evenemang",
+    "show_all_news": "Visa alla nyheter",
     "news_url": "/sv/nyheter",
     "results_text": "sökresultat",
     "show_all_events": "Visa alla evenemang",
