THF-182: Adding Metatags for social media sharing.

--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -1,6 +1,7 @@
 {
   "locale": "fi",
   "site_name": "Työllisyyspalvelut",
+  "site_title": "Helsingin työllisyyspalvelut",
   "link_copied": "Linkki kopioitu",
   "navigation": {
     "button_text": "Oma asiointi",
