--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -1,6 +1,7 @@
 {
   "locale": "sv",
   "site_name": "Sysselsättningstjänster",
+  "site_title": "Helsingfors sysselsättningstjänster",
   "link_copied": "Länken har kopierats",
   "navigation": {
     "button_text": "E-Tjänster",
