THF-182: Fixed proper translation.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,7 +1,7 @@
 {
   "locale": "en",
   "site_name": "Employment services",
-  "site_title": "City of Helsinki employment services",
+  "site_title": "Helsinki Employment Services",
   "link_copied": "Link copied",
   "navigation": {
     "button_text": "E-Services",
