:THF-168: Adding TPR Units list component and API calls.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -63,6 +63,7 @@
     "visit_address": "Visiting address",
     "open_hours": "Open hours",
     "phone_service": "Phone service",
-    "postal_address": "Postal address"
+    "postal_address": "Postal address",
+    "more_info": "See opening hours and contact information"
   }
 }
