--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -63,6 +63,7 @@
     "visit_address": "Besöksadress",
     "open_hours": "Öppettider",
     "phone_service": "Telefontjänst",
-    "postal_address": "Postadress"
+    "postal_address": "Postadress",
+    "more_info": "Se öppettider och kontaktuppgifter"
   }
 }
