THF-369: Fixing Events page url on listings.

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -27,7 +27,7 @@
     "news_url": "/en/news",
     "results_text": "search results",
     "show_all_events": "Show all events",
-    "events_page_url": "/en/events"
+    "events_page_url": "/en/current-matters/events"
   },
   "event": {
     "remote_event": "Remote event",
