--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -27,7 +27,7 @@
     "news_url": "/sv/nyheter",
     "results_text": "sökresultat",
     "show_all_events": "Visa alla evenemang",
-    "events_page_url": "/sv/evenemang"
+    "events_page_url": "/sv/aktuellt/evenemang"
   },
   "event": {
     "remote_event": "Distansevenemang",
