--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -58,5 +58,10 @@
     "phone_service": "Telefontjänst",
     "postal_address": "Postadress",
     "more_info": "Se öppettider och kontaktuppgifter"
+  },
+  "consent_info": {
+    "title": "Feedbackknappar kan inte visas",
+    "text": "För att använda denna funktion måste du acceptera cookies från webbplatsen. Du kan ge feedback på den här sidan genom att aktivera statistikrelaterade cookies.",
+    "button": "Ändra inställningarna för cookies"
   }
 }
