THF-379: Updated translation.

--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -28,7 +28,7 @@
     "results_text": "sökresultat",
     "show_all_events": "Visa alla evenemang",
     "events_page_url": "/sv/aktuellt/evenemang",
-    "no_events": "Inga kommande evenemang om detta ämne."
+    "no_events": "Det finns inga kommande evenemang om detta ämne."
   },
   "event": {
     "remote_event": "Distansevenemang",
