--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -10,11 +10,23 @@
     "navigate_to_page": "Siirry sivulle",
     "frontpage": "Etusivu",
     "breadcrumb_label": "Murupolku",
-    "theme_dropdown": "Muut kielet"
+    "theme_dropdown": "Muut kielet",
+    "search_label": "Hae",
+    "search_placeholder": "Hae sisältöä"
   },
   "search": {
     "filter": "Suodata tapahtumia",
-    "clear": "Poista valinta"
+    "clear": "Poista valinta",
+    "title": "Hae työllisyyspalveluiden sivuilta",
+    "input_label": "Mitä haet?",
+    "input_placeholder": "Haettava teksti",
+    "input_submit": "Hae",
+    "keyword": "Hakusana",
+    "result_text": "Hakutulosta",
+    "item_link_text": "Avaa hakutulos",
+    "pagination_aria_label": "Sivunumerointi",
+    "entity_type_event": "Tapahtuma",
+    "entity_type_article": "Uutinen"
   },
   "list": {
     "load_more": "Näytä lisää",
