--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -45,7 +45,8 @@
   "event": {
     "remote_event": "Etätapahtuma",
     "info_url_text": "Tapahtuman kotisivut",
-    "info_url_text_teams": "Avaa Teams-tapahtuma"
+    "info_url_text_teams": "Avaa Teams-tapahtuma",
+    "cancelled_text": "Tapahtuma peruttu: "
   },
   "video": {
     "cookie_consent": "Et ole antanut lupaa asettaa evästeitä.",
