--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -33,7 +33,8 @@
   "event": {
     "remote_event": "Distansevenemang",
     "info_url_text": "Evenemangets hemsida",
-    "info_url_text_teams": "Öppna Teams-evenemanget"
+    "info_url_text_teams": "Öppna Teams-evenemanget",
+    "cancelled_text": "Evenemanget inställt: "
   },
   "video": {
     "cookie_consent": "Du har inte gett tillstånd att installera cookies.",
