--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -17,16 +17,16 @@
   "search": {
     "filter": "Filtrera evenemang",
     "clear": "Töm sökfilter",
-    "title": "Hae työllisyyspalveluiden sivuilta",
-    "input_label": "Mitä haet?",
-    "input_placeholder": "Haettava teksti",
-    "input_submit": "Hae",
-    "keyword": "Hakusana",
-    "result_text": "Hakutulosta",
-    "item_link_text": "Avaa hakutulos",
-    "pagination_aria_label": "Sivunumerointi",
-    "entity_type_event": "Tapahtuma",
-    "entity_type_article": "Uutinen"
+    "title": "Sök på sysselsättningstjänsternas webbplats",
+    "input_label": "Vad söker du?",
+    "input_placeholder": "Text som söks",
+    "input_submit": "Sök",
+    "keyword": "Sökord",
+    "result_text": "Sökresultat",
+    "item_link_text": "Öppna sökresultat",
+    "pagination_aria_label": "Sidnumrering",
+    "entity_type_event": "Evenemang",
+    "entity_type_article": "Nyhet"
   },
   "list": {
     "load_more": "Visa fler",
