--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -34,7 +34,7 @@
     "remote_event": "Distansevenemang",
     "info_url_text": "Evenemangets hemsida",
     "info_url_text_teams": "Öppna Teams-evenemanget",
-    "cancelled_text": "Evenemanget inställt: "
+    "cancelled_text": "Inställt"
   },
   "video": {
     "cookie_consent": "Du har inte gett tillstånd att installera cookies.",
