--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -34,7 +34,7 @@
     "remote_event": "Remote event",
     "info_url_text": "Event homepage",
     "info_url_text_teams": "Open Teams-event",
-    "cancelled_text": "Event cancelled: "
+    "cancelled_text": "Cancelled"
   },
   "video": {
     "cookie_consent": "You have not allowed the use of cookies on this site.",
