--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -3,6 +3,8 @@
   "site_name": "Sysselsättningstjänster",
   "site_title": "Helsingfors sysselsättningstjänster",
   "link_copied": "Länken har kopierats",
+  "text_print": "Skriva ut",
+  "text_print_section": "Skriv ut detta avsnitt",
   "navigation": {
     "button_text": "E-Tjänster",
     "button_link": "https://asiointi.mol.fi/omaasiointi/?kieli=sv",
