THF-471: Add filter text to event filter

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "locale": "en",
-  "lang-code": "In English",
+  "lang-code": "Language Selector In English",
   "site_name": "Employment services",
   "site_title": "Helsinki Employment Services",
   "link_copied": "Link copied",
