--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -1,6 +1,6 @@
 {
   "locale": "fi",
-  "lang-code": "Suomeksi",
+  "lang-code": "Kielivalikko Suomeksi",
   "site_name": "Työllisyyspalvelut",
   "site_title": "Helsingin työllisyyspalvelut",
   "link_copied": "Linkki kopioitu",
