--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -1,6 +1,6 @@
 {
   "locale": "sv",
-  "lang-code": "På Svenska",
+  "lang-code": "Språkväljare På Svenska",
   "site_name": "Sysselsättningstjänster",
   "site_title": "Helsingfors sysselsättningstjänster",
   "link_copied": "Länken har kopierats",
