--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -32,7 +32,8 @@
     "pagination_aria_label": "Page numbers",
     "entity_type_event": "Event",
     "entity_type_article": "News",
-    "loading_suggestions": "Loading suggestions"
+    "loading_suggestions": "Loading suggestions",
+    "group_description": "You can select one of the following filters at a time"
   },
   "list": {
     "load_more": "Show more",
@@ -47,7 +48,7 @@
     "show_all_events": "Show all events",
     "events_page_url": "/en/current-matters/events",
     "no_events": "No upcoming events on this topic.",
-    "even_title": "Event",
+    "event_title": "Event",
     "event_link": "Event link to"
   },
   "event": {
