--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -6,7 +6,7 @@
   "link_copied": "Länken har kopierats",
   "text_print": "Skriva ut",
   "text_print_section": "Skriv ut detta avsnitt",
-  "skip-to-main-content": "Hoppa till innehåll",
+  "skip-to-main-content": "Gå direkt till huvudinnehållet",
   "navigation": {
     "button_text": "E-Tjänster",
     "button_link": "https://asiointi.mol.fi/omaasiointi/?kieli=sv",
@@ -32,7 +32,8 @@
     "pagination_aria_label": "Sidnumrering",
     "entity_type_event": "Evenemang",
     "entity_type_article": "Nyhet",
-    "loading_suggestions": "Laddar förslag"
+    "loading_suggestions": "Laddar förslag",
+    "group_description": "Du kan välja ett av följande filter i taget"
   },
   "list": {
     "load_more": "Visa fler",
@@ -47,7 +48,7 @@
     "show_all_events": "Visa alla evenemang",
     "events_page_url": "/sv/aktuellt/evenemang",
     "no_events": "Det finns inga kommande evenemang om detta ämne.",
-    "even_title": "Eevenemang",
+    "event_title": "Eevenemang",
     "event_link": "Evenemangslänk till"
   },
   "event": {
