THF-502: Add uk

--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -1,5 +1,5 @@
 {
-  "locale": "en",
+  "locale": "uk",
   "lang-code": "Language Selector In English",
   "global_menu_title": "Information in other languages",
   "site_name": "Employment services",
