--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -1,6 +1,7 @@
 {
   "locale": "fi",
   "lang-code": "Kielivalikko Suomeksi",
+  "global_menu_title": "Tietoa muilla kielillä",
   "site_name": "Työllisyyspalvelut",
   "site_title": "Helsingin työllisyyspalvelut",
   "link_copied": "Linkki kopioitu",
