--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,8 @@
 {
   "locale": "en",
   "lang-code": "Language Selector In English",
+  "choose_language": "Select site language",
+  "other_languages": "Open Information in other languages menu",
   "global_menu_title": "Information in other languages",
   "site_name": "Employment services",
   "site_title": "Helsinki Employment Services",
