--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -58,6 +58,10 @@
     "cancelled_text": "Cancelled",
     "field_offers_info_url": "Sign up"
   },
+  "news": {
+    "news": "News",
+    "newsletter": "Newsletter"
+  },
   "video": {
     "cookie_consent": "You have not allowed the use of cookies on this site.",
     "link_text": "Please accept cookies to see the content."
