THF-502: Add ru and so, also hide elements

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -1,6 +1,6 @@
 {
-  "locale": "uk",
-  "lang-code": "Language Selector In Ukrainian",
+  "locale": "ru",
+  "lang-code": "Language Selector In Russian",
   "global_menu_title": "Information in other languages",
   "site_name": "Employment services",
   "site_title": "Helsinki Employment Services",
