--- a/public/locales/so/common.json
+++ b/public/locales/so/common.json
@@ -1,6 +1,6 @@
 {
-  "locale": "uk",
-  "lang-code": "Language Selector In Ukrainian",
+  "locale": "so",
+  "lang-code": "Language Selector In Somali",
   "global_menu_title": "Information in other languages",
   "site_name": "Employment services",
   "site_title": "Helsinki Employment Services",
