THF-497: add email to Ohjaamo

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -80,6 +80,7 @@
     "new_window": "Open the map in a new window"
   },
   "unit": {
+    "email": "Email",
     "contact_information": "Contact information",
     "visit_address": "Visiting address",
     "open_hours": "Opening hours",
