--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -80,6 +80,7 @@
     "new_window": "Öppna kartan i nytt fönster"
   },
   "unit": {
+    "email": "Email",
     "contact_information": "Kontaktuppgifter",
     "visit_address": "Besöksadress",
     "open_hours": "Öppettider",
