--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -49,7 +49,8 @@
     "events_page_url": "/sv/aktuellt/evenemang",
     "no_events": "Det finns inga kommande evenemang om detta ämne.",
     "event_title": "Eevenemang",
-    "event_link": "Evenemangslänk till"
+    "event_link": "Evenemangslänk till",
+    "result_zero": "Inga sökresultat"
   },
   "event": {
     "remote_event": "Distansevenemang",
