Fix language URLs.

--- a/public/locales/uk/common.json
+++ b/public/locales/uk/common.json
@@ -44,7 +44,7 @@
     "blog_url": "/en/blog",
     "events_url": "/en/event",
     "show_all_news": "Show all news",
-    "news_url": "/en/news",
+    "news_url": "/uk/frontpage/uk-articles",
     "results_text": "search results",
     "show_all_events": "Show all events",
     "events_page_url": "/en/current-matters/events",
