THF-482: Add new aria-labels and correct filter total

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -36,7 +36,7 @@
     "entity_type_event": "Event",
     "entity_type_article": "News",
     "loading_suggestions": "Loading suggestions",
-    "group_description": "You can select one of the following filters at a time"
+    "group_description": "You can select multiple tags from the following filters at a time."
   },
   "list": {
     "load_more": "Show more",
