--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -36,7 +36,7 @@
     "entity_type_event": "Evenemang",
     "entity_type_article": "Nyhet",
     "loading_suggestions": "Laddar förslag",
-    "group_description": "Du kan välja ett av följande filter i taget"
+    "group_description": "Du kan välja flera av de olika filtren på en gång"
   },
   "list": {
     "load_more": "Visa fler",
