THF-562: Add partner job title

--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -64,7 +64,8 @@
   },
   "news": {
     "news": "Uutinen",
-    "newsletter": "Uutiskirje"
+    "newsletter": "Uutiskirje",
+    "partner_jobs": "Kumppanien tarjoamat työpaikat"
   },
   "video": {
     "cookie_consent": "Et ole antanut lupaa asettaa evästeitä.",
