--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -64,7 +64,8 @@
   },
   "news": {
     "news": "Nyhet",
-    "newsletter": "Nyhetsbrev"
+    "newsletter": "Nyhetsbrev",
+    "partner_jobs": "Jobb som erbjuds av partners"
   },
   "video": {
     "cookie_consent": "Du har inte gett tillstånd att installera cookies.",
