--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -64,7 +64,8 @@
   },
   "news": {
     "news": "News",
-    "newsletter": "Newsletter"
+    "newsletter": "Newsletter",
+    "partner_jobs": "Jobs offered by partners"
   },
   "video": {
     "cookie_consent": "You have not allowed the use of cookies on this site.",
