THF-562: Change the Swedish text

--- a/public/locales/sv/common.json
+++ b/public/locales/sv/common.json
@@ -65,7 +65,7 @@
   "news": {
     "news": "Nyhet",
     "newsletter": "Nyhetsbrev",
-    "partner_jobs": "Jobb som erbjuds av partners"
+    "partner_jobs": "Arbetsplatser som tillhandahålls av partner"
   },
   "video": {
     "cookie_consent": "Du har inte gett tillstånd att installera cookies.",
